--- a/public/css/home/main_page/style.css
+++ b/public/css/home/main_page/style.css
@@ -302,7 +302,7 @@ a {
 
 /* line 83, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_common.scss */
 a:hover {
-  color: #fff;
+  color: #343030;
 }
 
 /* line 86, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_common.scss */
@@ -314,7 +314,7 @@ a:hover,
 }
 
 /* line 92, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_common.scss */
-a,
+
 button {
   color: #fff;
   outline: medium none;
@@ -3674,7 +3674,6 @@ input:focus {
 /* line 192, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_headerMenu.scss */
 .header-bottom .header-right .favorit-items::before {
   position: absolute;
-  content: "02";
   width: 25px;
   height: 25px;
   background: #00b1ff;
@@ -3714,7 +3713,6 @@ input:focus {
 /* line 224, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_headerMenu.scss */
 .header-bottom .header-right .shopping-card::before {
   position: absolute;
-  content: "02";
   width: 25px;
   height: 25px;
   background: #00b1ff;
@@ -3732,6 +3730,19 @@ input:focus {
   transition: all 0.2s ease-out 0s;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
+
+.shopping-card span, .favorit-items span {
+    position: absolute;
+    height: 20px;
+    min-width: 20px;
+    color: #fff;
+    font-size: 13px;
+    background: #00b1ff;
+    text-align: center;
+    border-radius: 30px;
+    padding: 0 3px 3px 3px;
+}
+
 
 /* line 240, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_headerMenu.scss */
 .header-bottom .header-right .shopping-card i {
