--- a/public/css/broadcast.css
+++ b/public/css/broadcast.css
@@ -28,23 +28,21 @@ video, #console {
 }
 
 #videoBig {
-    width: 640px;
-    height: 480px;
+    width: 800px;
+    height: 600px;
     top: 0;
     left: 0;
     z-index: 1;
 }
-
 div#videoSmall {
     width: 240px;
     height: 180px;
-    padding: 0px;
     position: absolute;
-    top: 15px;
-    left: 400px;
-    cursor: pointer;
     z-index: 10;
-    padding: 0px;
+    margin: 10px;
+    touch-action: none;
+    left: 929px;
+    top: 21px;
 }
 
 div.dragged {
