--- a/public/css/home/main_page/styleSingleProduct.css
+++ b/public/css/home/main_page/styleSingleProduct.css
@@ -54,7 +54,11 @@ p {
 }
 
 img {
-	max-width: 100%;
+	max-width: 80%;
+}
+
+header img {
+    max-width: none;
 }
 
 input:focus,
@@ -711,7 +715,6 @@ ol {
 
 .product-item .pi-text h6 {
 	float: right;
-	padding-left: 40px;
 	overflow: hidden;
 	font-weight: 700;
 	color: #111111;
